--- a/.env
+++ b/.env
@@ -29,13 +29,25 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 
-QUEUE_MAIL=true
+# QUEUE_MAIL=true
+# MAIL_DRIVER_TYPE=MAIL_MAILER
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp.gmail.com
+# MAIL_PORT=587
+# MAIL_USERNAME=avsender@avnology.com
+# MAIL_PASSWORD=xjilinesppxlmjld
+# MAIL_ENCRYPTION=tls
+# MAIL_FROM_ADDRESS="avsender@avnology.com"
+# MAIL_FROM_NAME="${APP_NAME}"
+# MAIL_TO=avsender@avnology.com
+
+QUEUE_MAIL=false
 MAIL_DRIVER_TYPE=MAIL_MAILER
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=avsender@avnology.com
-MAIL_PASSWORD=xjilinesppxlmjld
+MAIL_PASSWORD=adulrxvysnwgblum
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="avsender@avnology.com"
 MAIL_FROM_NAME="${APP_NAME}"
