--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "predis/predis": "^2.1",
         "razorpay/razorpay": "^2.8",
         "spatie/laravel-newsletter": "^5.1",
-        "spatie/laravel-permission": "^5.9"
+        "spatie/laravel-permission": "^5.9",
+        "spatie/laravel-translatable": "^6.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
