--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=avnology
+DB_DATABASE=avsender
 DB_USERNAME=root
 DB_PASSWORD=
 
